overflow fix

--- a/assets/css/matrix.css
+++ b/assets/css/matrix.css
@@ -274,7 +274,7 @@ main {
   /* padding: 20px; */
   width: 100%;
   height: 100%;
-  overflow: scroll;
+  overflow: overlay;
 }
 
 .contrib {
